09-HorizontalPodAutoscaler-HPA.yaml
# if you apply this file via "kubectl apply -f" command, it will create autoscaling hpa on the desired deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      env: prod
  template:
    metadata:
      labels:
        app: nginx
        env: prod
        type: front-end
    spec:
      containers:
        - name: php-apache
          image: nginx
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 250m
              memory: 64Mi
            limits:
              memory: 128Mi
              cpu: 500m


# apply HPA on the deployment above
